--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -214,7 +214,12 @@ const teamMembers = [
   <Contacto />
 </Layout>
 
-<script is="">
+<script>
   const { signOut } = await import("auth-astro/client");
-  document.querySelector("#logout").onclick = () => signOut();
+  const logoutButton = document.querySelector("#logout");
+  
+  if (logoutButton) {
+    logoutButton.addEventListener("click", () => signOut());
+  }
 </script>
+
