intento de arreglo de nuevo

--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -63,7 +63,7 @@ const apiUrl = import.meta.env.ENDPOINT_MAILS;
   </div>
 </div>
 
-<script define:vars={{ apiUrl }}>
+<!-- <script define:vars={{ apiUrl }}>
   const formulario = document.getElementById('contacto');
   const alertContainer = document.getElementById('alertContainer');
   const alertMessage = document.getElementById('alertMessage');
@@ -143,4 +143,4 @@ const apiUrl = import.meta.env.ENDPOINT_MAILS;
   } else {
     console.error('El formulario no se encontró en el DOM');
   }
-</script>
+</script> -->
