agregar componente Proximamente y su uso en la página de talleres

--- a/src/pages/talleres.astro
+++ b/src/pages/talleres.astro
@@ -1,4 +1,5 @@
 ---
+import Proximamente from "../components/Proximamente";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -14,7 +15,11 @@ import Layout from "../layouts/Layout.astro";
       class="flex flex-col items-center h-screen justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-hero-gradient bg-center bg-cover bg-clip-padding"
       aria-labelledby="main-title"
     >
-
+      <main>
+        <Proximamente
+          text={"¡Próximamente tendremos disponibles los talleres oficiales de la mano del Aula de Software Libre! Donde podrás aprender sobre todo tipo de herramientas y tecnologías que te serán útiles para ayudarte a progresar en tu aprendizaje ¡Esperamos que te guste!"}
+        />
+      </main>
     </section>
   </Layout>
 </body>
