ajustar estilos en el encabezado, corregir vista del logo y agregar ID a la sección "Nosotros"

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -182,6 +182,7 @@ const teamMembers = [
     </section>
 
     <section
+      id="Nosotros"
       class="flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-[#172d30] bg-center bg-cover bg-clip-padding"
       aria-labelledby="main-title"
     >
